# sbpf-elf-verify-program

./: Cargo.toml  README.md
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
program/tests/: perf.rs
verifier/: Cargo.toml
